// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form  1`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 djOnwZ"
  >
    <form
      class="sc-bdfBwQ czeLXL"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 bEnuwL"
      >
        <div
          class="StyledBox-sc-13pk1d4-0 eMyfFh"
        >
          <div>
            <div
              class="StyledBox-sc-13pk1d4-0 dLXLoO FormField__FormFieldBox-m9hood-0 jGEMXj"
            >
              <label
                class="StyledText-sc-1sadyjn-0 drTEXR"
                for="password"
              >
                Password
              </label>
              <div
                class="StyledBox-sc-13pk1d4-0 gmReJc FormField__FormFieldContentBox-m9hood-1"
              >
                <div
                  class="sc-eCssSg jusudN"
                >
                  <div
                    class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 dpaJQp"
                  >
                    <input
                      autocomplete="off"
                      class="StyledTextInput-sc-1x30a0s-0 jKshUE sc-hKgILt cfXPhv"
                      id="password"
                      name="password"
                      type="password"
                      value=""
                    />
                  </div>
                  <div
                    class="StyledBox-sc-13pk1d4-0 dfYOnT sc-jSgupP jnvmcP"
                  >
                    <button
                      class="StyledButton-sc-323bzc-0 hiyJPE"
                      tabindex="-1"
                      type="button"
                    >
                      <svg
                        aria-label="FormView"
                        class="StyledIcon-ofa7kd-0 dEeaTZ"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M12,17 C9.27272727,17 6,14.2222222 6,12 C6,9.77777778 9.27272727,7 12,7 C14.7272727,7 18,9.77777778 18,12 C18,14.2222222 14.7272727,17 12,17 Z M11,12 C11,12.55225 11.44775,13 12,13 C12.55225,13 13,12.55225 13,12 C13,11.44775 12.55225,11 12,11 C11.44775,11 11,11.44775 11,12 Z"
                          fill="none"
                          stroke="#000"
                          stroke-width="2"
                        />
                      </svg>
                    </button>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="StyledBox-sc-13pk1d4-0 dLXLoO FormField__FormFieldBox-m9hood-0 jGEMXj"
            >
              <label
                class="StyledText-sc-1sadyjn-0 drTEXR"
                for="password1"
              >
                Confirm Password
              </label>
              <div
                class="StyledBox-sc-13pk1d4-0 gmReJc FormField__FormFieldContentBox-m9hood-1"
              >
                <div
                  class="sc-eCssSg jusudN"
                >
                  <div
                    class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 dpaJQp"
                  >
                    <input
                      autocomplete="off"
                      class="StyledTextInput-sc-1x30a0s-0 jKshUE sc-hKgILt cfXPhv"
                      id="password1"
                      name="password1"
                      type="password"
                      value=""
                    />
                  </div>
                  <div
                    class="StyledBox-sc-13pk1d4-0 dfYOnT sc-jSgupP jnvmcP"
                  >
                    <button
                      class="StyledButton-sc-323bzc-0 hiyJPE"
                      tabindex="-1"
                      type="button"
                    >
                      <svg
                        aria-label="FormView"
                        class="StyledIcon-ofa7kd-0 dEeaTZ"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M12,17 C9.27272727,17 6,14.2222222 6,12 C6,9.77777778 9.27272727,7 12,7 C14.7272727,7 18,9.77777778 18,12 C18,14.2222222 14.7272727,17 12,17 Z M11,12 C11,12.55225 11.44775,13 12,13 C12.55225,13 13,12.55225 13,12 C13,11.44775 12.55225,11 12,11 C11.44775,11 11,11.44775 11,12 Z"
                          fill="none"
                          stroke="#000"
                          stroke-width="2"
                        />
                      </svg>
                    </button>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="StyledBox-sc-13pk1d4-0 dLXLoO FormField__FormFieldBox-m9hood-0 jGEMXj"
            >
              <label
                class="StyledText-sc-1sadyjn-0 drTEXR"
                for="url"
              >
                URL
              </label>
              <div
                class="StyledBox-sc-13pk1d4-0 gmReJc FormField__FormFieldContentBox-m9hood-1"
              >
                <div
                  class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 dpaJQp"
                >
                  <input
                    autocomplete="off"
                    class="StyledTextInput-sc-1x30a0s-0 nnMiQ"
                    id="url"
                    name="url"
                    value=""
                  />
                </div>
              </div>
            </div>
            <div
              class="StyledBox-sc-13pk1d4-0 dLXLoO FormField__FormFieldBox-m9hood-0 jGEMXj"
            >
              <div
                class="StyledBox-sc-13pk1d4-0 gmReJc FormField__FormFieldContentBox-m9hood-1"
              >
                <button
                  aria-label="Open Drop"
                  class="StyledButton-sc-323bzc-0 hkpJCj Select__StyledSelectDropButton-sc-17idtfo-1 dYfCep"
                  id="gender"
                  type="button"
                >
                  <div
                    class="StyledBox-sc-13pk1d4-0 jmuHez"
                  >
                    <div
                      class="StyledBox-sc-13pk1d4-0 iAryDB"
                    >
                      <div
                        class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 dpaJQp"
                      >
                        <input
                          autocomplete="off"
                          class="StyledTextInput-sc-1x30a0s-0 nnMiQ Select__SelectTextInput-sc-17idtfo-0 bIurki"
                          id="gender__input"
                          name="gender"
                          readonly=""
                          tabindex="-1"
                          type="text"
                          value=""
                        />
                      </div>
                    </div>
                    <div
                      class="StyledBox-sc-13pk1d4-0 eA-DBEo"
                      style="min-width: auto;"
                    >
                      <svg
                        aria-label="FormDown"
                        class="StyledIcon-ofa7kd-0 fuviCN"
                        viewBox="0 0 24 24"
                      >
                        <polyline
                          fill="none"
                          points="18 9 12 15 6 9"
                          stroke="#000"
                          stroke-width="2"
                        />
                      </svg>
                    </div>
                  </div>
                </button>
              </div>
            </div>
            <div
              class="StyledBox-sc-13pk1d4-0 dLXLoO FormField__FormFieldBox-m9hood-0 jGEMXj"
            >
              <label
                class="StyledText-sc-1sadyjn-0 drTEXR"
                for="tos"
              >
                Terms of service
              </label>
              <div
                class="StyledBox-sc-13pk1d4-0 gmReJc FormField__FormFieldContentBox-m9hood-1"
              >
                <div
                  class="StyledBox-sc-13pk1d4-0 iBWTSp"
                >
                  <label
                    class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 htOOow"
                    for="tos"
                  >
                    <div
                      class="StyledBox-sc-13pk1d4-0 kDZMxH StyledCheckBox-sc-1dbk5ju-6 hOFfoi"
                    >
                      <input
                        class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 fYuA-Ds"
                        id="tos"
                        name="tos"
                        type="checkbox"
                      />
                      <div
                        class="StyledBox-sc-13pk1d4-0 jYPXhZ StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 kRWCTA"
                      />
                    </div>
                  </label>
                </div>
              </div>
            </div>
            <div
              class="StyledBox-sc-13pk1d4-0 dLXLoO FormField__FormFieldBox-m9hood-0 jGEMXj"
            >
              <label
                class="StyledText-sc-1sadyjn-0 drTEXR"
                for="age"
              >
                Age
              </label>
              <div
                class="StyledBox-sc-13pk1d4-0 gmReJc FormField__FormFieldContentBox-m9hood-1"
              >
                <div
                  class="sc-eCssSg jusudN"
                >
                  <div
                    class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 dpaJQp"
                  >
                    <input
                      autocomplete="off"
                      class="StyledTextInput-sc-1x30a0s-0 jKshUE sc-hKgILt coFMdp"
                      id="age"
                      inputmode="numeric"
                      name="age"
                      pattern="[0-9]*"
                      type="text"
                      value=""
                    />
                  </div>
                  <div
                    class="StyledBox-sc-13pk1d4-0 dfYOnT sc-jSgupP jnvmcP"
                  >
                    <button
                      class="StyledButton-sc-323bzc-0 hiyJPE"
                      tabindex="-1"
                      type="button"
                    >
                      <svg
                        aria-label="Add"
                        class="StyledIcon-ofa7kd-0 dEeaTZ"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M12,22 L12,2 M2,12 L22,12"
                          fill="none"
                          stroke="#000"
                          stroke-width="2"
                        />
                      </svg>
                    </button>
                    <button
                      class="StyledButton-sc-323bzc-0 hiyJPE"
                      tabindex="-1"
                      type="button"
                    >
                      <svg
                        aria-label="Subtract"
                        class="StyledIcon-ofa7kd-0 dEeaTZ"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M2,12 L22,12"
                          fill="none"
                          stroke="#000"
                          stroke-width="2"
                        />
                      </svg>
                    </button>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="StyledBox-sc-13pk1d4-0 jsieLm"
            >
              <button
                class="StyledButton-sc-323bzc-0 iZFCLM"
                type="submit"
              >
                Submit
              </button>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`Form  2`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 djOnwZ"
  >
    <form
      class="sc-bdfBwQ czeLXL"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 bEnuwL"
      >
        <div
          class="StyledBox-sc-13pk1d4-0 gQhLwa"
        >
          <div>
            <div
              class="StyledBox-sc-13pk1d4-0 dLXLoO FormField__FormFieldBox-m9hood-0 jGEMXj"
            >
              <label
                class="StyledText-sc-1sadyjn-0 drTEXR"
                for="fieldname"
              >
                Text
              </label>
              <div
                class="StyledBox-sc-13pk1d4-0 gmReJc FormField__FormFieldContentBox-m9hood-1"
              >
                <div
                  class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 dpaJQp"
                >
                  <input
                    autocomplete="off"
                    class="StyledTextInput-sc-1x30a0s-0 nnMiQ"
                    id="fieldname"
                    name="fieldname"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`Form  3`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 djOnwZ"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 jsieLm"
    >
      <form
        class="sc-bdfBwQ czeLXL"
      >
        <div
          class="StyledBox-sc-13pk1d4-0 bEnuwL"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 gQhLwa"
          >
            <div>
              <div
                class="StyledBox-sc-13pk1d4-0 dLXLoO FormField__FormFieldBox-m9hood-0 jGEMXj"
              >
                <label
                  class="StyledText-sc-1sadyjn-0 drTEXR"
                  for="mytextinput"
                >
                  Text
                </label>
                <div
                  class="StyledBox-sc-13pk1d4-0 gmReJc FormField__FormFieldContentBox-m9hood-1"
                >
                  <div
                    class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 dpaJQp"
                  >
                    <input
                      autocomplete="off"
                      class="StyledTextInput-sc-1x30a0s-0 nnMiQ"
                      id="mytextinput"
                      name="mytextinput"
                      value=""
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </form>
      <span
        class="StyledText-sc-1sadyjn-0 gOVGlS"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Form  4`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 djOnwZ"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 jsieLm"
    >
      <form
        class="sc-bdfBwQ czeLXL"
      >
        <div
          class="StyledBox-sc-13pk1d4-0 bEnuwL"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 gQhLwa"
          >
            <div>
              <div
                class="StyledBox-sc-13pk1d4-0 dLXLoO FormField__FormFieldBox-m9hood-0 jGEMXj"
              >
                <label
                  class="StyledText-sc-1sadyjn-0 drTEXR"
                  for="errofield"
                >
                  Text
                </label>
                <div
                  class="StyledBox-sc-13pk1d4-0 gmReJc FormField__FormFieldContentBox-m9hood-1"
                >
                  <div
                    class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 dpaJQp"
                  >
                    <input
                      autocomplete="off"
                      class="StyledTextInput-sc-1x30a0s-0 nnMiQ"
                      id="errofield"
                      name="errofield"
                      value=""
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </form>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Form  5`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 djOnwZ"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 jsieLm"
    >
      <form
        class="sc-bdfBwQ czeLXL"
      >
        <div
          class="StyledBox-sc-13pk1d4-0 bEnuwL"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 gQhLwa"
          >
            <div>
              <div
                class="StyledBox-sc-13pk1d4-0 dLXLoO FormField__FormFieldBox-m9hood-0 jGEMXj"
              >
                <label
                  class="StyledText-sc-1sadyjn-0 drTEXR"
                  for="invalidfield"
                >
                  Text
                </label>
                <div
                  class="StyledBox-sc-13pk1d4-0 gmReJc FormField__FormFieldContentBox-m9hood-1"
                >
                  <div
                    class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 dpaJQp"
                  >
                    <input
                      autocomplete="off"
                      class="StyledTextInput-sc-1x30a0s-0 nnMiQ"
                      id="invalidfield"
                      name="invalidfield"
                      value=""
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </form>
      <span
        class="StyledText-sc-1sadyjn-0 gOVGlS"
      >
        valid
      </span>
    </div>
  </div>
</DocumentFragment>
`;
